Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60573

Lights not filtered by Layer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.0 Beta 4
    • 5.9.0 Beta 3, 5.9
    • Qt3D
    • None
    • 6fd0fc4217fe689092957e0bad8a927acb4aa09a

    Description

      Have a scene with two sub-scenes rendered into texture render targets and then composed together. Let the scene contents be controlled by LayerFilters and Layers for each sub-scene. Have some lights in each sub-scene.

      It seems that light sources are gathered irrespective of Layer components. This leads to weird results since unexpected lights (i.e. also the lights from the other sub-scene) get applied in each sub-scene.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes