Apply layer filter to light sources

Cannot just take all entities with light components: the layer filter
must be applied as usual.

Task-number: QTBUG-60573
Change-Id: I361fab88745113c1b24b68cbff52051139046d9c
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>